css/page-skin.css
*{box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;text-rendering:geometricPrecision}
body,input,button,textarea,pre,form{font-family:Roboto,RobotoDraft,Helvetica,Arial,sans-serif;font-size:1rem;-webkit-font-smoothing:antialiased;-webkit-tap-highlight-color:rgba(0,0,0,0)}
body{background:#cdcdcd61;min-height:100vh;margin:0;overflow:hidden}
body:not(.overflow){overflow-y:auto}svg{vertical-align:text-bottom;fill:hsl(0,0%,53.3%)}
ol,ul{margin:0;padding:0}.mb-20{margin-bottom:20px}
.list{list-style:none}
h1,h2,h3,h4,h5,h6,p{margin:0;cursor:default}h3.title{margin-bottom:15px;font-size:1.1rem;font-weight:bold}
a,a:hover{text-decoration:none}
iframe,img{border:none}iframe{width:100%}img{max-width:100%;height:auto}
.button-phim{text-align:center}
.noi-dung-phim{text-align:left}
.container .sidebar .PopularPosts .widget-content .post{width:50%}
.container .sidebar .PopularPosts .widget-content .post div .post_thumb{height:80px}
.container .flexbox .SidebarTop .PopularPosts .widget-content .post{width:20%}
/**/
@-webkit-keyframes color_change{from{}to{}}
@-moz-keyframes color_change{from{}to{background-color:#ff7144}}
@-ms-keyframes color_change{from{background-color:#cc0e29}to{background-color:#ff7144}}
@-o-keyframes color_change{from{background-color:#cc0e29}to{background-color:#ff7144}}
@keyframes color_change{from{background-color:#cc0e29}to{background-color:#ff7144}}
button.register{padding:10px 10px;margin-bottom:10px;color:#fff;font-size:larger;background-color:#ff7144;-webkit-animation:color_change 0.1s infinite alternate;-moz-animation:color_change 0.1s infinite alternate;-ms-animation:color_change 0.1s infinite alternate;-o-animation:color_change 0.1s infinite alternate;animation:color_change 0.1s infinite alternate}
/**/
.flexbox{display:flex;flex-direction:row;background:#d8d8d936;padding:0 5px 15px;border-radius:4px;align-content:space-between;justify-content:space-between;margin-bottom:10px;margin-top:10px;width:100%}.flexbox>div{text-align:left;padding:1px 0 1px 5px;margin:5px}.flexbox>.left{background-color:#d30058}.flexbox>.middle{background-color:#36abe1}.flexbox>.right{background-color:#23b776}@media(max-width:480px){.flexbox{flex-flow:column;padding:0 5px 15px;width:100%}.flexbox>.left{order:1;flex:.5}.flexbox>.right{order:2;flex:.5}.flexbox>.middle{order:3;width:100%}}@media(min-width:600px){.flexbox{flex-flow:nowrap;padding:0 5px 15px;width:100%}.img{padding:0 5px 0}.flexbox>div{width:33.33% !important}.flexbox>.left{order:1}.flexbox>.middle{order:2}.flexbox>.right{order:3}}
/**/
[data-view-type=mobile] a:hover{cursor:default;outline:none}[data-view-type=desktop] .has-hover:hover{cursor:pointer}
.center{text-align:center;background:#ff000061;margin:-45px 0 20px;padding:15px;position:relative;font-size:20px;color:#000;font-weight:bold}.center:hover{background:transparent}
.video-container{position:relative;padding-bottom:56.25%}
.video-container iframe{position:absolute;top:0;left:0;width:100%;height:100%}
.overlay{background:rgba(0,0,0,0.502);position:fixed;top:0;bottom:0;left:0;right:0;z-index:8;transition:opacity .05s cubic-bezier(0.4,0.0,0.2,1);opacity:1}
.table-overflow{overflow-x:auto}table{width:100%;border-collapse:collapse;border-spacing:0}
.flex{display:-ms-flexbox;display:-webkit-flex;display:flex}
.align-center{-webkit-align-items:center;align-items:center}
.flex-align{display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-ms-flex-align:center;align-items:center}
.flex-center{display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-ms-flex-align:center;align-items:center;justify-content:center}
.flex-row{-js-display:flex;display:-ms-flexbox;display:flex;-ms-flex-flow:row nowrap;flex-flow:row nowrap;-ms-flex-align:center;align-items:center;-ms-flex-pack:justify;justify-content:space-between;width:100%}
.flex-grow{-ms-flex:1;flex:1;-ms-flex-negative:1;-ms-flex-preferred-size:auto!important}
.flex-flow{-ms-flex-flow:row wrap;flex-flow:row wrap}
.flex-left{margin-right:auto}.flex-right{margin-left:auto}
.hidden,span.blog-admin,[data-allow-comments="false"] a.comment-reply,.modal--target{display:none}
.relative{position:relative}.absolute{position:absolute}.fixed{position:fixed}
.left{left:0}.right{right:0}.float-left{float:left;width:100%}.float-right{float:right}.w100{width:100%}
main.main>.widget,aside.sidebar>.widget{background:#fff;float:left;width:100%;padding:15px}.overflow{overflow:hidden}.overflow-x{overflow-x:auto}
.overflow-y{overflow-y:auto}.text-left{text-align:left}.text-right{text-lign:right}.text-center{text-align:center}
.container{max-width:1200px;margin:0 auto}
.header{position:fixed;left:0;right:0;top:0;z-index:999;background:#518d06;box-shadow:0 3px 5px 0 rgba(0,0,0,.1)}
.header>div{min-height:50px}
.header-widget a{position:relative;color:#fff}.header-widget a:hover{text-decoration:none!important}
.header .container.flex.flex-flow div#header-middle.header-middle.menu.section div .widget .widget-content ul li a:hover{background:#fff;color:#000;text-decoration:none}
.header-widget h1,.header-widget h2{display:none!important}
.header-widget .has-title{font-family:sans-serif;font-size:1rem;font-weight:500}
[data-view-type=desktop] .header-widget a:focus{outline:none!important}
.header-widget .has-img{border-radius:50%;height:40px;width:40px}
.header-widget .has-img>img{width:28px;height:28px;vertical-align:middle;border-radius:50%}
.header-widget .has-img:hover{background:rgba(60,64,67,0.08)}
.header-widget .has-img:focus,.header-widget .has-img:active{background:rgba(95,99,104,0.24)}
.header-widget .has-img:focus{background:rgba(95,99,104,0.24);outline:none}
.header-widget .has-bulk{background:#fff;height:28px;margin:0 15px 0 10px;-webkit-transition:opacity .1s ease-out;transition:opacity .1s ease-out;width:1px}
.menu a{color:rgba(0,0,0,0.87)}.header+div{transition:padding-top .3s cubic-bezier(0.4,0.0,0.2,1)}
.header+div[expanded="true"]{padding-top:50px}
/* ... */

